--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,3 +1,6 @@
+#root{
+    background-color: rgb(0, 0, 128);
+}
 input{
     color: #000080;
     margin: 5px;
@@ -20,13 +23,38 @@ label{
 }
 
 button{
-    margin: auto;
+    margin:5px auto;
     display: block;
     background-color: #5CBA47;
     color: white;
-    padding-top: 10px;
-    padding-bottom:10px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 5px;
     border: 1px solid #5CBA47;
+}
+
+.talkContainer{
+    padding-left: 0 40px;
+    padding-top: 5px;
+}
+
+.talkContainer p{
+    margin-left: 40px;
+}
+.talk{
+    background-color: white;
+    padding: 10px 0;
+    border: 1px solid #e5faf8;
+    border-radius: 2px;
+    width: 250px;
+    margin: 10px auto;
+}
+.talk p,h4{
+    text-align: center;
+}
+.timeDate{
+    font-size: 14px;
+}
+
+.speakerLocation{
+    display: flex;
+    justify-content: space-evenly;
 }
