--- a/src/components/style.css
+++ b/src/components/style.css
@@ -4,13 +4,13 @@ form{
 }
 input{
     color: #000080;
-    margin: 5px;
+    margin-bottom: 5px;
 }
 
 form div{
     background-color: #e5faf8;
-    margin: 20px;
-    padding-top: 5px;
+    margin: 15px;
+    padding-top: 10px;
 }
 
 label{
