Implement remove talk from schedule functionality

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -118,3 +118,8 @@ label{
     border-radius: 5px;
     margin: 5px;
 }
+
+.schedule-btn{
+    transform: rotate(90deg);
+    background-color: #000080;
+}
