--- a/src/components/style.css
+++ b/src/components/style.css
@@ -155,6 +155,10 @@ label{
 }
 
 /***********SHOW TALK******************/
+.showTalk-container{
+  max-width: 450px;
+  margin: auto;
+}
 .showTalk{
     background-color: white;
     margin: 0 auto;
@@ -162,7 +166,6 @@ label{
     padding: 10px;
     border-radius: 10px;
     color: #000080;
-    background-color: rgb(0, 0, 128);
     opacity: 0.8;
     padding-bottom: 5px;
 }
